[package]
name = "ancestors-dpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-condvar-fair = { version = "1.0.0", default-features = false, features = ["tokio"] }
ctrlc = "3.4.0"
dyno = "0.1.0"
eyre = "0.6.8"
futures = "0.3.28"
tokio = { version = "1.29.1", default-features = false, features = ["sync", "rt-multi-thread", "rt", "time"] }
ulid = "1.0.0"
